data/derived/comb/progs/unify/prog5127.ml.out
Characters 50-51:
  | b -> wwhile f b;;
                ^
Error: This expression has type 'a but an expression was expected of type
         'a * 'b
       The type variable 'a occurs inside 'a * 'b
